Server side validation on admin pages and some user related pages.

--- a/src/main/resources/templates/changePassword.html
+++ b/src/main/resources/templates/changePassword.html
@@ -85,7 +85,7 @@
 	</section>
 	<div class="register">
 		<div class="container">
-			<form action="#" th:action="@{/afterChangePassword}"
+			<form action="#" th:action="@{/user/afterChangePassword}"
 				th:object="${changePasswordData}" method="post"
 				onsubmit="return passwordFunction(this);">
 				<div class="row">
@@ -94,23 +94,25 @@
 						<h2>Change Password</h2>
 						<hr class="colorgraph"></hr>
 						<div class="form-group">
-							<input type="password" name="oldPassword" pattern="*{4,16}"
-								maxlength="16" class="form-control input-lg"
-								placeholder="Enter Old Password" tabindex="1"
-								required="required" />
+							<div id="invalidPasswordMessage" class="text-danger"
+								th:text="${invalidPassword}"></div>
+							<input type="password" oninput="hideInvalidMessage()"
+								name="oldPassword" pattern="[^\s]{4,16}" maxlength="16"
+								class="form-control input-lg" placeholder="Enter Old Password"
+								tabindex="1" required="required" />
 						</div>
 						<div class="form-group">
-							<input type="password" name="newPassword" pattern="*{4,16}"
-								maxlength="16" id="password" class="form-control input-lg"
-								placeholder="Enter New Password" tabindex="2"
-								required="required" />
+							<input type="password" name="newPassword" pattern="[^\s]{4,16}"
+								title="Spaces are not allowed" maxlength="16" id="password"
+								class="form-control input-lg" placeholder="Enter New Password"
+								tabindex="2" required="required" />
 						</div>
 						<span class="text-danger pull-left" id="error_id"></span>
 						<div class="inputDiv">
-							<input type="password" tabindex="3" pattern="*{4,16}"
-								maxlength="16" class="form-control input-lg"
-								id="password_confirm" name="cnfPassword"
-								placeholder="Confirm New Password" />
+							<input type="password" tabindex="3" pattern="[^\s]{4,16}"
+								title="Spaces are not allowed" maxlength="16"
+								class="form-control input-lg" id="password_confirm"
+								name="cnfPassword" placeholder="Confirm New Password" />
 						</div>
 
 						<hr class="colorgraph" />
