--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -68,6 +68,7 @@
 						<h2>Please Sign Up</h2>
 						<hr class="colorgraph"></hr>
 						<div class="row">
+						<div class="text-danger" th:text="${errorMessage}"></div>
 							<div class="col-md-6">
 								<div class="form-group">
 									<input type="text" name="firstName"
