--- a/src/main/resources/templates/searchUsers.html
+++ b/src/main/resources/templates/searchUsers.html
@@ -31,8 +31,10 @@
 					</h1>
 				</div>
 			</div>
+			<div class="row" style="margin-bottom: 10px">
+				<h2 class="text-danger" th:text="${errorMessage}"></h2>
+			</div>
 			<div class="row">
-
 				<div class="col-md-12 col-sm-12 col-xs-12">
 					<!-- Advanced Tables -->
 					<div class="panel panel-info">
