--- a/src/main/resources/templates/setPassword.html
+++ b/src/main/resources/templates/setPassword.html
@@ -69,16 +69,18 @@
 						<h2>Please set your Password</h2>
 						<hr class="colorgraph"></hr>
 						<div class="form-group">
-							<input type="password" name="password" pattern="*{4,16}"
-								maxlength="16" id="password" class="form-control input-lg"
-								placeholder="Enter Password" tabindex="1" required="required" />
+							<div class="text-danger" th:text="${errorMessage}"></div>
+							<input type="password" name="password" pattern="[^\s]{4,16}"
+								title="Spaces are not allowed" maxlength="16" id="password"
+								class="form-control input-lg" placeholder="Enter Password"
+								tabindex="1" required="required" />
 						</div>
 						<span class="text-danger pull-left" id="error_id"></span>
 						<div class="inputDiv">
-							<input type="password" tabindex="2" pattern="*{4,16}"
-								maxlength="16" class="form-control input-lg"
-								id="password_confirm" name="cnfPassword"
-								placeholder="Enter Confirm Password" />
+							<input type="password" tabindex="2" pattern="[^\s]{4,16}"
+								title="Spaces are not allowed" maxlength="16"
+								class="form-control input-lg" id="password_confirm"
+								name="cnfPassword" placeholder="Enter Confirm Password" />
 						</div>
 						<input type="hidden" th:value="${user.email}" name="email" />
 
