--- a/src/main/resources/templates/forgotPassword.html
+++ b/src/main/resources/templates/forgotPassword.html
@@ -60,27 +60,28 @@
 	</section>
 	<div class="register">
 		<div class="container">
-		<form action="#" th:action="@{/afterForgotPassword}" th:object="${forgotPasswordData}" method="post">
-			<div class="row">
-				<div
-					class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-					<h2>Please Enter Your Email</h2>
-					<hr class="colorgraph"></hr>
-					<div class="form-group">
-						<input type="email" name="email"
-							class="form-control input-lg" placeholder="Enter Your Email"
-							tabindex="3" required="required" />
-					</div>
-					
-					<hr class="colorgraph" />
-					<div class="row">
-						<div class="col-md-6 col-md-offset-3">
-							<input type="submit" value="Reset Password"
-								class="btn btn-primary btn-block btn-lg" tabindex="7" />
+			<form action="#" th:action="@{/afterForgotPassword}"
+				th:object="${forgotPasswordData}" method="post">
+				<div class="row">
+					<div
+						class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+						<h2>Please Enter Your Email</h2>
+						<hr class="colorgraph"></hr>
+						<div class="form-group">
+							<div class="text-danger" th:text="${errorMessage}"></div>
+							<input type="email" name="email" class="form-control input-lg"
+								placeholder="Enter Your Email" tabindex="3" required="required" />
+						</div>
+
+						<hr class="colorgraph" />
+						<div class="row">
+							<div class="col-md-6 col-md-offset-3">
+								<input type="submit" value="Reset Password"
+									class="btn btn-primary btn-block btn-lg" tabindex="7" />
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
 			</form>
 		</div>
 	</div>
