Added Issue BiCycle Service and date picker plugin for date time input in issue bicycle page

--- a/src/main/resources/templates/adminNav.html
+++ b/src/main/resources/templates/adminNav.html
@@ -225,7 +225,7 @@
 						</ul></li>
 					<li><a th:href="@{/manager/addNewUser}"><i
 							class="fa fa-fw fa-file "></i> Add New User</a></li>
-					<li><a th:href="@{/manager/booking/} + ${#authentication.principal.userId}"><i
+					<li><a th:href="@{/manager/booking}"><i
 							class="fa fa-fw fa-file "></i> Booking</a></li>
 					<li><a th:href="@{/manager/addWalletBalance}"><i
 							class="fa fa-fw fa-file "></i> Add Wallet balance</a></li>
