--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -232,31 +232,39 @@
 			</ul>
 			<!-- /.bxslider -->
 			<div class="bx-thumbnail-wrapper">
-				<div class="container">
-					<div class="row">
+				<div class="container-fluid">
+					<div class="row-fluid">
 						<div class="col-md-12">
+						<div>
+						<form action="" class="form-inline" style="width:100%; padding-top: 5px;">
+							<input type="text" class="form-control input-lg" placeholder="Booking Date and Time"/>
+							<input type="text" class="form-control input-lg" placeholder="Pick-up Point"/>
+							<input type="text" class="form-control input-lg" placeholder="Return Time"/>
+							<input type="submit" class="btn btn-success btn-lg" value="Book Now"/>
+							</form>
+							</div>
 							<div id="bx-pager">
 								<a data-slide-index="0" href=""><img
 									src="images/slider/thumb1.jpg"
-									th:src="@{images/slider/thumb1.jpg}" alt="thumbnail 1" /></a> <a
+									th:src="@{images/slider/thumb1.jpg}" alt="thumbnail 1" height="70" width="120"/></a> <a
 									data-slide-index="1" href=""><img
 									src="images/slider/thumb2.jpg"
-									th:src="@{images/slider/thumb2.jpg}" alt="thumbnail 2" /></a> <a
+									th:src="@{images/slider/thumb2.jpg}" alt="thumbnail 2" height="70" width="120" /></a> <a
 									data-slide-index="2" href=""><img
 									src="images/slider/thumb3.jpg"
-									th:src="@{images/slider/thumb3.jpg}" alt="thumbnail 3" /></a> <a
+									th:src="@{images/slider/thumb3.jpg}" alt="thumbnail 3" height="70" width="120" /></a> <a
 									data-slide-index="3" href=""><img
 									src="images/slider/thumb4.jpg"
-									th:src="@{images/slider/thumb4.jpg}" alt="thumbnail 4" /></a> <a
+									th:src="@{images/slider/thumb4.jpg}" alt="thumbnail 4" height="70" width="120" /></a> <a
 									data-slide-index="4" href=""><img
 									src="images/slider/thumb5.jpg"
-									th:src="@{images/slider/thumb5.jpg}" alt="thumbnail 5" /></a> <a
+									th:src="@{images/slider/thumb5.jpg}" alt="thumbnail 5" height="70" width="120" /></a> <a
 									data-slide-index="5" href=""><img
 									src="images/slider/thumb6.jpg"
-									th:src="@{images/slider/thumb6.jpg}" alt="thumbnail 5" /></a> <a
+									th:src="@{images/slider/thumb6.jpg}" alt="thumbnail 5" height="70" width="120" /></a> <a
 									data-slide-index="6" href=""><img
 									src="images/slider/thumb7.jpg"
-									th:src="@{images/slider/thumb7.jpg}" alt="thumbnail 5" /></a>
+									th:src="@{images/slider/thumb7.jpg}" alt="thumbnail 5" height="70" width="120" /></a>
 							</div>
 						</div>
 					</div>
