Added server side validations to user registration and wallet balance from Manager's section.

--- a/src/main/resources/templates/addWalletBalance.html
+++ b/src/main/resources/templates/addWalletBalance.html
@@ -41,12 +41,12 @@
 										<div>
 											<label class="control-label"> UserId</label> <input
 												type="text" name="userId" class="form-control"
-												required="required" />
+												  maxlength="2" required="required" />
 										</div>
 										<div>
 											<label class="control-label">Balance</label> <input
 												type="text" name="balance" class="form-control"
-												required="required" />
+												maxlength="3" required="required" />
 
 										</div>
 										<div style="padding: 5px">
