--- a/src/main/resources/templates/addNewUser.html
+++ b/src/main/resources/templates/addNewUser.html
@@ -29,7 +29,7 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-10">
+					<div class="col-md-9">
 						<div class="panel panel-info">
 							<div class="panel-heading">
 								<strong>Add New User</strong>
@@ -43,17 +43,17 @@
 											<div class="col-md-6">
 												<div class="form-group">
 													<input type="text" name="firstName"
-														class="form-control input-lg" pattern="[a-zA-Z ]{2,20}"
+														class="form-control input-lg" placeholder="First Name"
+														pattern="[a-zA-Z ]{2,20}"
 														title="Please enter alphabet only. Size{min=2 , max=20}"
-														placeholder="First Name" tabindex="1" maxlength="20"
-														required="required" />
+														tabindex="1" maxlength="20" required="required" />
 												</div>
 											</div>
 											<div class="col-md-6">
 												<div class="form-group">
 													<input type="text" name="lastName"
 														class="form-control input-lg" placeholder="Last Name"
-														pattern="[a-zA-Z ]{2,20}"
+														pattern="[a-zA-Z]{2,20}"
 														title="Please enter alphabet only. Size{min=2 , max=20}"
 														tabindex="2" maxlength="20" required="required" />
 												</div>
@@ -146,7 +146,11 @@
 						</div>
 						<!-- panel-->
 					</div>
-					<div class="col-md-2"></div>
+					<div class="col-md-3">
+						<div>
+							<h3 class="text-danger" th:text="${errorMessage}"></h3>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
