--- a/src/main/resources/templates/updateUserDetails.html
+++ b/src/main/resources/templates/updateUserDetails.html
@@ -107,7 +107,7 @@
 					<!-- SIDEBAR MENU -->
 					<div class="profile-usermenu">
 						<ul class="nav">
-							<li><a th:href="@{/user/userProfile/} + ${user.userId}">
+						<li><a th:href="@{/user/userProfile/} + ${user.userId}">
 									<i class="glyphicon glyphicon-home"></i> Overview
 							</a></li>
 							<li class="active"><a href="#"> <i
@@ -142,6 +142,7 @@
 												<input class="form-control" type="text" name="firstName"
 													th:value="${user.firstName}" pattern="[a-zA-Z ]{2,30}"
 													tabindex="1" maxlength="15" required="required" />
+
 											</div>
 										</div>
 										<br />
@@ -151,7 +152,7 @@
 											</div>
 											<div class="col-md-6">
 												<input class="form-control" type="text" name="lastName"
-													th:value="${user.lastName}" tabindex="2" maxlength="15" />
+													th:value="${user.lastName}" pattern="[a-zA-Z]{2,30}" maxlength="30" required="required" />
 											</div>
 										</div>
 										<br />
@@ -182,7 +183,7 @@
 											</div>
 											<div class="col-md-6">
 												<input class="form-control" type="text" name="mobileNo"
-													maxlength="10" pattern="[0-9]{10}"
+													maxlength="10" pattern="*[0-9]{10}"
 													title="Enter only numbers" th:value="${user.mobileNo}"
 													required="required" />
 											</div>
