--- a/src/main/resources/templates/updatePickupPointDetails.html
+++ b/src/main/resources/templates/updatePickupPointDetails.html
@@ -65,7 +65,7 @@
 									<div class="control-group">
 										<label class="control-label">Max capacity</label>
 										<div class="controls">
-											<input type="number" tabindex="3" maxlength="3"
+											<input type="number" tabindex="3" maxlength="3" min="1" max="999"
 												th:value="${pickUpPoint.maxCapacity}" name="maxCapacity"
 												class="input-xlarge form-control" required="required" /> <span
 												class="help-block">The maximum no. of bicycle this
